Bu faylda sonuncu defe mirik ishledi

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <section class="sup-header">
         <nav>
             <a href="index.html"><img src="./img/logo.png"></a>
@@ -32,6 +33,16 @@
         <h1>About Us</h1>
 
     </section>
+
+    <!--  NURCAN BUNU MIRIK999 YAZDI  -->
+    <section style="text-align: center">
+        <h3>HELLO NURCAN</h3>
+        <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit.
+            Consectetur cumque expedita libero quaerat sit.</p>
+    </section>
+    <!--  BURADA BITDI  -->
+
 
     <section class="about-us">
         <div class="about-col">
