--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             consectetur adipisicing elit.
             Consectetur cumque expedita libero quaerat sit.</p>
     </section>
-    <!--  BURADA BITDI  -->
+    <!--  BURADA BITDII  -->
 
 
     <section class="about-us">
